Replace deprecated findSuitable with suitable
findSuitable is deprecated and slated for removal, so let's use suitable instead

Method deprecation fix

Replaced deprecated methods with non-deprecated ones

Remove all deprecated InputEvent usages

Replace them with the current versions and erase unneeded conversions/support code

Replaced deprecated fields with non-deprecated ones

TaskMonitorAdapter.DUMMY_MONITOR -> TaskMonitor.DUMMY, DataType.VOID -> VoidDataType.dataType

Replace deprecated Number object constructors with valueOf

valueOf is the recommended replacement

Fix

Use getConstructor().newInstance() instead of just newInstance()

Calling newInstance() on a class alone is dangerous and deprecated. Using getConstructor().newInstance() is preferrable