@@ -749,7 +749,7 @@ public class ProgramMerge implements PropertyVisitor {
 		// Use heavyweight disassembler for delay slotted instruction
 		AddressSet restrictedSet = new AddressSet(addr);
 		Disassembler disassembler =
-			Disassembler.getDisassembler(program, TaskMonitorAdapter.DUMMY_MONITOR, null);
+			Disassembler.getDisassembler(program, TaskMonitor.DUMMY, null);
 		disassembler.disassemble(addr, restrictedSet, false);
 		return program.getListing().getInstructionAt(addr);
 	}
@@ -3730,7 +3730,7 @@ public class ProgramMerge implements PropertyVisitor {
 			BookmarkManager bm2 = originProgram.getBookmarkManager();
 			try {
 				bm1.removeBookmarks(new AddressSet(resultAddress, resultAddress),
-					TaskMonitorAdapter.DUMMY_MONITOR);
+                        TaskMonitor.DUMMY);
 			}
 			catch (CancelledException e) {
 				// DummyAdapter doesn't let cancel occur.
@@ -3911,7 +3911,7 @@ public class ProgramMerge implements PropertyVisitor {
 		}
 		else if (map instanceof LongPropertyMap) {
 			try {
-				return new Long(((LongPropertyMap) map).getLong(address));
+				return Long.valueOf(((LongPropertyMap) map).getLong(address));
 			}
 			catch (NoValueException e) {
 				return null;
@@ -3919,7 +3919,7 @@ public class ProgramMerge implements PropertyVisitor {
 		}
 		else if (map instanceof IntPropertyMap) {
 			try {
-				return new Integer(((IntPropertyMap) map).getInt(address));
+				return Integer.valueOf(((IntPropertyMap) map).getInt(address));
 			}
 			catch (NoValueException e) {
 				return null;
