@@ -305,7 +305,7 @@ public class LocalBufferFile implements BufferFile {
 	 */
 	@Override
 	public void setParameter(String name, int value) {
-		userParms.put(name, new Integer(value));
+		userParms.put(name, Integer.valueOf(value));
 	}
 
 	/*
@@ -539,7 +539,7 @@ public class LocalBufferFile implements BufferFile {
 		while (nextIndex >= 0) {
 
 			// Push index on stack
-			freeIndexList.add(new Integer(nextIndex));
+			freeIndexList.add(Integer.valueOf(nextIndex));
 
 			// Read block to get next index
 			seekBufferBlock(nextIndex);
@@ -1401,7 +1401,7 @@ public class LocalBufferFile implements BufferFile {
 		}
 
 		if (monitor == null) {
-			monitor = TaskMonitorAdapter.DUMMY_MONITOR;
+			monitor = TaskMonitor.DUMMY;
 		}
 
 		int srcBlockCnt;
